[package]
name = "mdbook-summary-generate"
version = "0.1.0"
edition = "2021"
description = "A mdbook preprocessor to generate SUMMARY.md from a directory structure"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4.35"
clap = "4.4.8"
semver = "1.0.20"
anyhow = "1.0.75"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"